Fixed overflowed input ring when single input is rendered

--- a/web/css/components/_modal.less
+++ b/web/css/components/_modal.less
@@ -134,6 +134,8 @@
         overflow: auto;
         &:extend(.breeze-scrollbar all);
         overscroll-behavior: contain;
+        padding-bottom: 3px;
+        padding-top: 3px;
         &:last-child {
             padding-bottom: var(--modal-padding-y);
         }
